# rweb-openapi

./: Cargo.toml
examples/: printer.rs
src/: error.rs  lib.rs
src/v3_0/: components.rs  schema.rs
