[package]
name = "rweb-openapi"
version = "0.7.0"
authors = ["강동윤 <kdy1997.dev@gmail.com>"]
description = "Rust bindings for openapi schemas"
homepage = "https://github.com/kdy1/openapi"
repository = "https://github.com/kdy1/openapi"
keywords = ["rweb", "openapi", "swagger"]
license = "MIT"
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = { version = "2", features = ["serde"] }
indexmap = { version = "2.0", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "1.4"
